--- a/index.html
+++ b/index.html
@@ -1,56 +1,56 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title> Positions </title>
+	<title> axali 5 </title>
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
 	<header class="header">
-		<a class="logo" href="#"> LOGO </a>
+		<a class="logo" href="#">LOGO </a>
 		<nav class="nav">
 			<ul class="nav-ul">
 				<li class="nav-li"> 
-					<a class="a" href="#"> HOME </a>
-				</li>
+			 	<a class="nav-a" href="#"> HTML </a>
+			    </li>
 				<li class="nav-li"> 
-					<a class="a" href="#"> ABOUT US </a>
-				</li>
-				<li class="nav-li"> 
-					<a class="a" href="#"> CONTACT </a>
-				</li>
+			 	<a class="nav-a" href="#"> CSS </a>
+			    </li>
+			    <li class="nav-li"> 
+			 	<a class="nav-a" href="#"> JAVASCRIPT </a>
+			    </li>
 			</ul>
 		</nav>
-	</header>
-	<section class="section1">
-		<p class="section-text"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+	</header>	
+	<section class="section1"> 	
+		<p class="section-text"> jldfg;dfjg'uf'g 'dfpgu'pofu'gou'poguuuuuuuuuuuuufesdusf udfpupodf'youeurpg'ueruypouf'puyeury]oudf'gjeu9-ruy]e-oprutypieu['fitgufiohdgjg yfgsuicfgwu[tyhofighuruiprioproprpioriopiop'] 
 		</p>
+	</section>	
+	<section class="section2"> 	
+		<div class="wrapper-box"> 
+			<div class="box1"> </div>
+			<div class="box2"> </div>
+			<div class="box3"> </div>
+		</div>	
 	</section>
-	<section class="section-2"> 
-		<div class="box-wrapper"> 
-			<div class="box-1"> </div>
-			<div class="box-2"> </div>
-			<div class="box-3"> </div>
-		</div>
+	<section class="section3"> 	
+		<div class="wrapper"> 
+			<div class="boxb"> Bela </div>
+			<div class="boxy"> Robakidze </div>
+		</div>	
 	</section>
-	<section class="section3">
-		<div class="blue-box">
-			<div class="yellow-box">
-			</div>
-		</div>
+	<section class="section4"> 	
+		<div class="image"> 
+			<img class="imaaage" src="images/p1.jpg" alt="foto">
+			<p class="image-text"> image </p>
+		</div>	
 	</section>
-	<section class="section4">
-		<div class="image-wrapper">
-			<img class="image" src="https://thumbs.dreamstime.com/b/rainbow-love-heart-background-red-wood-60045149.jpg" alt="image">
-			<p class="img-text"> image text </p>
-		</div>
-	</section>
-	<section class="section5">
-		<div class="icon-wrapper">
-			<img class="icon" src="https://cdn.iconscout.com/icon/free/png-256/chat-2639493-2187526.png">
-		</div>
+	<section class="section5"> 	
+		<div class="chat"> 
+			<img class="chat1" src="images/download.jpg" alt="logo">
+		</div>	
 	</section>
 </body>
 </html>
